Closed
Bug 1713174
Opened 4 years ago
Closed 4 years ago
dom/storage/SessionStorageManager.cpp:87:18: error: MakeScopeExit was not declared in this scope
Categories
(Firefox :: Session Restore, defect)
Firefox
Session Restore
Tracking
()
RESOLVED
FIXED
90 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox88 | --- | unaffected |
| firefox89 | --- | unaffected |
| firefox90 | --- | fixed |
People
(Reporter: petr.sumbera, Assigned: petr.sumbera)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:88.0) Gecko/20100101 Firefox/88.0
Steps to reproduce:
Solaris build fails with:
10:56.98 In file included from Unified_cpp_dom_storage0.cpp:56:
10:56.98 /builds/psumbera/mozilla-central-build/dom/storage/SessionStorageManager.cpp: In function bool mozilla::dom::RecvGetSessionStorageData(uint64_t, uint32_t, bool, mo zilla::ipc::PBackgroundParent::GetSessionStorageManagerDataResolver&&):
10:56.98 /builds/psumbera/mozilla-central-build/dom/storage/SessionStorageManager.cpp:87:18: error: MakeScopeExit was not declared in this scope
This is probably regression after Bug 1700623.
| Assignee | ||
Comment 1•4 years ago
|
||
Updated•4 years ago
|
Assignee: nobody → petr.sumbera
Updated•4 years ago
|
Has Regression Range: --- → yes
Comment 2•4 years ago
|
||
Set release status flags based on info from the regressing bug 1700623
status-firefox88:
--- → unaffected
status-firefox89:
--- → unaffected
status-firefox90:
--- → affected
status-firefox-esr78:
--- → unaffected
Pushed by archaeopteryx@coole-files.de:
https://hg.mozilla.org/integration/autoland/rev/7b34993b950f
add missing ScopeExit header r=glandium
Comment 4•4 years ago
|
||
| bugherder | ||
Status: UNCONFIRMED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 90 Branch
Updated•4 years ago
|
Keywords: regression
You need to log in
before you can comment on or make changes to this bug.
Description
•