Bug 1713174 - add missing ScopeExit header r=glandium

Differential Revision: https://phabricator.services.mozilla.com/D116156